[package]
name = "proof_of_prime"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.50.0"
shuttle-axum = "0.50.0"
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num = "0.4"
num-primes = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"

# 👇 Esta seção indica o binário que o Shuttle deve compilar
[[bin]]
name = "proof_of_prime"
path = "src/main.rs"

